2011-06-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/network-stream.el (open-network-stream): Return an :error
	saying what the problem was, if possible.

	* mail/smtpmail.el (smtpmail-via-smtp): Report the error from the
	server.

	* net/network-stream.el (network-stream-open-starttls): If we
	wanted to use STARTTLS, and the server offered it, but we weren't
	able to because we had no STARTTLS support, then close the connection.
	(open-network-stream): Return an :error element, if present.

2011-06-26  Chong Yidong  <cyd@stupidchicken.com>

	* hl-line.el (hl-line-sticky-flag): Doc fix.
	(global-hl-line-sticky-flag): New option (Bug#8323).
	(global-hl-line-highlight): Obey it.

	* vc/vc.el (vc-revert-show-diff): Default to t.

2011-06-26  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout-widgets.el (allout-widgets-post-command-business): Stop
	decorating intermediate isearch matches.  They're not being
	undecorated when an isearch is continued past, and isearch
	automatically collapses them.  This leads to "widget leaks", where
	decorated items accumulate in collapsed areas.  Lines with lots of
	hidden widgets can slow down cursor travel, substantially.  Too
	much complicated machinery would be needed to ensure undecoration,
	so we're doing without this nicety.

	(allout-widgets-tally-string): Don't try to do a hash-table-count
	of allout-widgets-tally when it's nil.  This eliminates spurious "Error
	during redisplay: (wrong-type-argument hash-table-p nil)" warnings in
	*Messages* when allout-widgets-maintain-tally is t.

2011-06-26  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-normalize-argument): Rename to
	display-buffer-normalize-arguments.  Handle special meaning of
	LABEL argument.  Respect special-display-function when popping up
	a new frame.  Fix code searching for a window showing the buffer
	on another frame.
	(display-buffer-normalize-specifiers): Call
	display-buffer-normalize-arguments.